name:                blog
version:             0.1.0.0
synopsis:            My blog built on top of the Hakyll project template from stack
description:         Please see README.md
homepage:            https://github.com/kdungs/dun.gs
license:             BSD3
license-file:        LICENSE
author:              Kevin Dungs
maintainer:          kevin@dun.gs
copyright:           2016 Kevin Dungs
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable blog
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base == 4.*,
                       hakyll == 4.7.*
